--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cfn-flip==1.2.3
 chardet==3.0.4
 click==7.1.2
 Django==3.1.2
+django-cors-headers==3.5.0
 django-rest-framework==0.1.0
 djangorestframework==3.12.1
 durationpy==0.5
