--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ certifi==2020.6.20
 cfn-flip==1.2.3
 chardet==3.0.4
 click==7.1.2
-Django==3.1.2
+Django==2.1.15
 django-cors-headers==3.5.0
 django-rest-framework==0.1.0
+django-s3-sqlite==0.0.3
 djangorestframework==3.12.1
 durationpy==0.5
 future==0.18.2
