Host sqlite on S3 Add _sqlite3.co to the root of this project when deploying to Lambda to (since sqlite>=3.8.3 is not available on Lambda) https://github.com/FlipperPA/django-s3-sqlite/blob/master/shared-objects/python-3-8/_sqlite3.so

--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -5,6 +5,7 @@
         "profile_name": "eb-cli",
         "project_name": "coolcoffee",
         "runtime": "python3.8",
-        "s3_bucket": "zappa-2pusknqcp"
+        "s3_bucket": "zappa-2pusknqcp",
+        "use_precompiled_packages": false
     }
 }
